Fix showing scrollbars in the sidebar menu.
Now the x-navigation scrollbar is not shown during the transition
effect. when showing the sidebar menu.

--- a/themes/bootstrap/assets/css/ublog.css
+++ b/themes/bootstrap/assets/css/ublog.css
@@ -40,6 +40,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    overflow: hidden;
 }
 
 #root.sidebar-open #sidebar-wrapper {
